# sdpo

./: .gitignore  DEVIATIONS.md  FINAL_VERIFICATION_REPORT.md  HANDOVER.md  LICENSE  PROJECT_SUMMARY.md  README.md  SDPO_AUDIT.md  TODO.md  UNSLOTH_INTEGRATION.md  VERIFICATION.md  pyproject.toml
.github/workflows/: publish.yml
benchmark/: README.md  common.py  csv_logger.py  dataset.py  evaluate.py  plot_results.py  reward_mbpp.py  run_eval_standalone.py  run_grpo.py  run_sdpo.py  run_sdpo_audit.py  test_csv_logger.py  test_dataset.py  test_evaluate.py  test_reward_mbpp.py
benchmark/results/: baseline_standalone_eval.csv  grpo_eval.csv  grpo_standalone_eval.csv  grpo_train.csv  sdpo_audit_eval.csv  sdpo_audit_train.csv  sdpo_eval.csv  sdpo_standalone_eval.csv  sdpo_train.csv
dev/: audit.md  handover.md  todo.md
docs/: configuration.md  deviations.md  how-it-works.md  unsloth.md  verification.md
examples/: README.md  basic_sdpo.py  sdpo_lora_ema.py  sdpo_rich_feedback.py  sdpo_with_unsloth.py
src/sdpo_rl/: __init__.py  config.py  reprompting.py  teacher.py  trainer.py  utils.py
src/sdpo_trainer/: __init__.py  config.py  distillation.py  reprompting.py  teacher.py  trainer.py  utils.py
tests/: test_config.py  test_distillation.py  test_examples.py  test_reference_match.py  test_reprompting.py  test_teacher.py  test_trainer_e2e.py  test_unsloth_integration.py
